# sunday-football-manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  app.py  justfile  pyproject.toml
.github/workflows/: release.yml
migrations/: 001_initial.sql  002_teams_use_player_ids.sql  003_elo_snapshot_use_player_ids.sql
scripts/: changelog.sh
src/: auth.rs  balance.rs  db.rs  elo.rs  main.rs  models.rs
src/views/: history.rs  layout.rs  match_day.rs  mod.rs  record.rs  roster.rs
