[package]
name = "football-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Environment
dotenvy = "0.15"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "tls-rustls"] }

# Templating
maud = { version = "0.26", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
itertools = "0.13"
thiserror = "1"
tracing = "0.1"
