[package]
name = "football-manager"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/ferologics/sunday-football-manager"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["form", "cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Environment
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "tls-rustls"] }

# Templating
maud = { version = "0.26", features = ["axum"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
itertools = "0.13"
thiserror = "1"
tracing = "0.1"
