[project]
name = "sunday-football-manager"
version = "0.1.0"
description = "A lightweight Streamlit app for balancing Sunday League football teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
